# neural-network

./: README.md  neural-network.cabal
src/AI/: NeuralNetwork.hs
src/AI/NeuralNetwork/: ActivationFunctions.hs
